--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import '../styles/global.css';
+import { ViewTransitions } from 'astro:transitions';
+---
 <!doctype html>
 <html lang="en">
 	<head>
@@ -6,17 +10,16 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
+		<ViewTransitions />
 	</head>
-	<body>
-		<slot />
+	<body class="bg-primary-bg text-text-dark-secondary font-sans">
+		<main class="max-w-screen-lg mx-auto p-4">
+			<slot />
+		</main>
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
