--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,29 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import { getCollection, type CollectionEntry } from 'astro:content';
 import Layout from '../layouts/Layout.astro';
+import PersonalInfoCard from '../components/PersonalInfoCard.astro';
+import Navigation from '../components/Navigation.astro';
+import SocialLinks from '../components/SocialLinks.astro';
+import ArticleCard from '../components/ArticleCard.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const posts = (await getCollection('blog')).sort(
+  (a: CollectionEntry<'blog'>, b: CollectionEntry<'blog'>) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()
+);
 ---
-
 <Layout>
-	<Welcome />
+  <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+    
+    <aside class="md:col-span-1 space-y-8">
+      <PersonalInfoCard />
+      <Navigation />
+      <SocialLinks />
+    </aside>
+
+    <section class="md:col-span-3 space-y-8">
+      {posts.map((post: CollectionEntry<'blog'>, index: number) => (
+        <ArticleCard post={post} index={index} />
+      ))}
+    </section>
+
+  </div>
 </Layout>
