--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,8 +17,8 @@ import { ViewTransitions } from 'astro:transitions';
 
 		<ViewTransitions />
 	</head>
-	<body class="bg-primary-bg text-text-dark-secondary font-sans">
-		<main class="max-w-screen-lg mx-auto p-4">
+	<body class="text-text-dark-secondary font-sans">
+		<main class="max-w-[1200px] mx-auto p-4">
 			<slot />
 		</main>
 	</body>
