--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -22,9 +22,25 @@ const navItems = [
 </nav>
 
 <style>
-  nav {
-    background-color: #111111;
+  .metal-card {
+    background-image: url('/blackmetal.jpg');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    isolation: isolate;
   }
+
+  .metal-card::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: -1;
+  }
+
   .nav-link {
     color: #CCCCCC;
   }
