--- a/src/components/PersonalInfoCard.astro
+++ b/src/components/PersonalInfoCard.astro
@@ -9,9 +9,25 @@
 </div>
 
 <style>
-  div {
-    background-color: #111111;
+  .metal-card {
+    background-image: url('/blackmetal.jpg');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    isolation: isolate;
   }
+
+  .metal-card::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: -1;
+  }
+
   h1 {
     color: #FFFFFF;
   }
