--- a/src/components/CloseButton.astro
+++ b/src/components/CloseButton.astro
@@ -4,7 +4,7 @@
 <a 
   href="/" 
   aria-label="Close" 
-  class="fixed top-8 right-8 z-50 w-12 h-12 flex items-center justify-center bg-black/50 hover:bg-black/80 transition-colors duration-300"
+  class="sticky top-4 float-right z-50 w-12 h-12 flex items-center justify-center bg-black/50 hover:bg-black/80 transition-colors duration-300"
 >
   <svg 
     xmlns="http://www.w3.org/2000/svg" 
